--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
 <body>
 	<div class="container">
 		<div class="row" id="buttonArea">button area</div>
-		<div class="row" id="addButton">add button</div>
+		<div class="row" id="addButton">
+			<form>
+				Add a new button:<br>
+  				<input type="text" id="newButton" name="newButton"><br>
+  				<div class="button"><button type="submit">Add button!</button></div>
+			</form>
+		</div>
 		<div class="row" id="gifsAndRatings">gifs and ratings</div>
 	</div>
 </body>
