--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 	<div class="container">
 		<div class="row" id="buttonArea">button area</div>
 		<div class="row" id="addButton">
-			<form>
+			<form id="frm1">
 				Add a new button:<br>
   				<input type="text" id="newButton" name="newButton"><br>
-  				<div class="button"><button type="submit">Add button!</button></div>
 			</form>
+			<button onclick="myFunction()">Add a new button!</button>
 		</div>
 		<div class="row" id="gifsAndRatings">gifs and ratings</div>
 	</div>
