--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				Add a new button:<br>
   				<input type="text" id="newButton" name="newButton"><br>
 			</form>
-			<button onclick="myFunction()">Add a new button!</button>
+			<button onclick="loadNewButton()">Add a new button!</button>
 		</div>
 		<div class="row" id="gifsAndRatings">gifs and ratings</div>
 	</div>
