--- a/index.html
+++ b/index.html
@@ -13,15 +13,12 @@
 </head>
 <body>
 	<div class="container">
-		<div class="row" id="buttonArea">button area</div>
+		<div class="row" id="buttonArea"></div>
 		<div class="row" id="addButton">
-			<form id="frm1">
-				Add a new button:<br>
-  				<input type="text" id="newButton" name="newButton"><br>
-			</form>
+  			<input type="text" id="newButton" name="newButton"><br>
 			<button onclick="loadNewButton()">Add a new button!</button>
 		</div>
-		<div class="row" id="gifsAndRatings">gifs and ratings</div>
+		<div class="row" id="gifsAndRatings"></div>
 	</div>
 </body>
 </html>
