--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 	<div class="container">
+		<div class="row" id="giphyLogo"><img src="assets/images/giphyLogo.png"></div>
 		<div class="row" id="buttonArea"></div>
 		<div class="row" id="addButton">
   			<input type="text" id="newButton" name="newButton"><br>
